--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,18 @@
 /* Essential */
+main {
+    margin: 50px;
+}
 
 /* Jumbotron  */
 .jumbotron {
     background-image: url(../images/portfolio.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    height: calc(100vh - 25px);
+    height: calc(100vh - 230px);
+    color: white;
+    min-height: 300px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
   }
